Day_3/Lesson_1_cluster_networking/deployment/netshoot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netshoot
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netshoot
  template:
    metadata:
      labels:
        app: netshoot
    spec:
      containers:
      - name: netshoot
        image: nicolaka/netshoot:latest
        command: ["sleep", "infinity"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: gcr.io/google-samples/hello-app:2.0
---
apiVersion: v1
kind: Service
metadata:
  name: netshoot-webserver
  namespace: default
spec:
  type: NodePort
  selector:
    app: webserver
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: xdp-lb
  namespace: default
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30081
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: xdp-lb-manual
  labels:
    kubernetes.io/service-name: xdp-lb
addressType: IPv4
ports:
  - name: http
    port: 8080
endpoints:
  - addresses:
      - 10.41.255.251   # anything routable, ip neigh add 10.41.255.251 lladdr {cni0 mac} dev cni0
    conditions:
      ready: true
