Day_3/Lesson_1_cluster_networking/deployment/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: untitled-policy
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 8080
  egress:
    - to:
        - namespaceSelector: {}
